Web-App/Capstones/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-tracker
  labels:
    name: finance-tracker
