Web-App/Capstones/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-tracker-ingress
  namespace: finance-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: finance-tracker.local
    http:
      paths:
      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: eureka-server
            port:
              number: 8761
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: zuul-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zuul-gateway
            port:
              number: 8080
